Examples/Java/Abstraction/Abstraction27315.java
Animal myObj = new Animal(); // error
